--- a/cue_cetera/android/build.gradle
+++ b/cue_cetera/android/build.gradle
@@ -1,13 +1,15 @@
 buildscript {
     ext.kotlin_version = '1.7.10'
     repositories {
-        google()
         mavenCentral()
+        maven { url "https://chaquo.com/maven" }
+        google()
     }
 
     dependencies {
         classpath 'com.android.tools.build:gradle:7.2.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.chaquo.python:gradle:14.0.2"
     }
 }
 
