--- a/cue_cetera/pubspec.yaml
+++ b/cue_cetera/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   file_picker: ^5.2.6
   video_player: ^2.6.0
+  path_provider:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -39,6 +40,9 @@ dependencies:
   firebase_core: ^2.8.0
   firebase_database: ^10.0.16
   firebase_storage: ^11.0.16
+  firebase_ml_model_downloader: ^0.2.1
+  open_file: ^2.1.1
+  chaquopy: ^0.0.19
 
 dev_dependencies:
   flutter_test:
