--- a/cue_cetera/pubspec.yaml
+++ b/cue_cetera/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   firebase_core: ^2.8.0
   firebase_database: ^10.0.16
   firebase_storage: ^11.0.16
-  firebase_ml_model_downloader: ^0.2.1
+  firebase_ml_model_downloader: ^0.2.1+1
   open_file: ^2.1.1
   chaquopy: ^0.0.19
 
@@ -65,6 +65,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/predictLabels.txt
 
   # To add assets to your application, add an assets section, like this:
   # assets:
