--- a/cue_cetera/pubspec.yaml
+++ b/cue_cetera/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   file_picker: ^5.2.6
   video_player: ^2.6.0
   path_provider:
+  camera: ^0.10.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
